--- a/Home.html
+++ b/Home.html
@@ -38,7 +38,29 @@ header {
         height: auto; /* Maintain aspect ratio */
     }
 } 
+   .ligo {
+  float: upper-left;
+  margin-right: 0px;
+}
+
+  .fixed {
+        width: fixed; /* Fixed width */
+        height: 100px; /* Maintain aspect ratio */
+    padding: fixed;
+    }
+} 
+ 
+  /* TITANIUM          */
   
+  .Lugi {
+  float: bottom-center;
+  margin-right: 0px;
+  }
+  .Tits {
+        width: 100px; /* Fixed width */
+        height: fixed; /* Maintain aspect ratio */
+    
+  }
   
   
   
@@ -97,6 +119,16 @@ header {
     <div class="logo">
       <img src="Logo.png" alt="Logo" class="fixed-size-img">
     </div>
+
+  
+    <div class="logo">
+      <img src="ACM.jpeg" alt="Lugi" class="fixed-size-img">
+    </div>
+  
+  <div class="ligo">
+      <img src="VIP.jpg" alt="ligo" class="fixed">
+    </div>
+  
  <nav>
     <ul>
       <li><a href="#">Home</a></li>
