--- a/Home.html
+++ b/Home.html
@@ -30,19 +30,20 @@ header {
   
 .logo {
   float: left;
-  margin-right: 10px;
+  margin-right: 0px;
 }
 
   .fixed-size-img {
-        width: 80px; /* Fixed width */
+        width: 103px; /* Fixed width */
         height: auto; /* Maintain aspect ratio */
     }
 } 
+
+    /*----------------VIPS----------------*/
    .ligo {
   float: upper-left;
   margin-right: 0px;
 }
-
   .fixed {
         width: fixed; /* Fixed width */
         height: 100px; /* Maintain aspect ratio */
@@ -50,7 +51,7 @@ header {
     }
 } 
  
-  /* TITANIUM          */
+  /*---------------------TITANIUM------------------*/
   
   .Lugi {
   float: bottom-center;
@@ -61,7 +62,6 @@ header {
         height: fixed; /* Maintain aspect ratio */
     
   }
-  
   
   
     body {
